fixed overflow for chatmessage

--- a/public/stylesheets/chatmessage.css
+++ b/public/stylesheets/chatmessage.css
@@ -616,6 +616,7 @@ body {
     border-radius: 8px;
     max-width: 205px;
     line-height: 130%;
+    word-break: break-all;
   }
   #frame .content .messages ul li.sent .timestamp {
     font-size: 10px;
@@ -623,7 +624,7 @@ body {
     left: 10px;
     text-transform: uppercase;
     color: #999;
-    top: 25px;
+    bottom: 10px;
   }
   #frame .content .messages ul li.replies .timestamp {
     font-size: 10px;
@@ -631,7 +632,7 @@ body {
     right: 10px;
     text-transform: uppercase;
     color: #999;
-    top: 25px;
+    bottom: 10px;
   }
   @media screen and (min-width: 735px) {
     #frame .content .messages ul li p {
